# mlx-vision-agent

./: .gitignore  README.md  app.py  benchmark.py  dashboard.py  openmemory.sqlite  pyproject.toml  requirements.txt  utils.py  web_app.py
benchmarks/: benchmark_results_1758326163.md  benchmark_results_1758349035.md
react-dashboard/: README.md  package-lock.json  package.json  tailwind.config.js
react-dashboard/src/: App.tsx  index.css
react-dashboard/src/components/: AnalysisStream.tsx  Header.tsx  MetricsBar.tsx  ScreenshotGallery.tsx
react-dashboard/src/hooks/: useSocket.ts
react-dashboard/src/types/: index.ts
templates/: dashboard.html
